# MiniMQTT

./: .gitignore  CMakeLists.txt  README.md
inc/: mqtt.h  pack.h
src/: FAIL_Filo_.json  Filo.json  client_tcp.c  main.c  mqtt.c  pack.c  s.json
syl_broker/: MQTTstruct.h  brokerMQTT_v0.c  test  test.c
tests/: MQTTstruct.h  client.c  client_tcp.c
